module1/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celonis-app-service
spec:
  selector:
    app: celonis-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
