module1/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: celonis-app-ingress
spec:
  rules:
  - host: celonis-app.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: celonis-app-service
            port:
              number: 80
